--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Music Visualization</title>
   </head>
   <body onload="init()">
-    <div>
-      <input type="file" id="file"  accept="Audio/*" capture></input>
-      <audio id="audio" type="audio/mp3" controls></audio>
-    </div>
-    <div class="canvas-container">
-      <canvas id="canvas" width="1024" height="500"></canvas>
+    <div class="main-container">
+      <div class="canvas-container">
+        <canvas id="canvas" width="1024" height="500"></canvas>
+      </div>
+      <div class="audio-container">
+        <div class="file-box">
+          <label for="exfile">Upload & Play Music</label>
+          <input type="file" id="exfile"  accept="Audio/*" capture></input>
+        </div>
+        <audio id="audio" type="audio/mp3" controls></audio>
+      </div>
     </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
