--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
         <canvas id="canvas" width="1024" height="500"></canvas>
       </div>
       <div class="audio-container">
+        <audio id="audio" type="audio/mp3" controls></audio>
         <div class="file-box">
           <label for="exfile">Upload & Play Music</label>
           <input type="file" id="exfile"  accept="Audio/*" capture></input>
         </div>
-        <audio id="audio" type="audio/mp3" controls></audio>
+        <div class="color-box">
+          <input type="color" id="color" value="#ff9f43"/>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="./script.js"></script>
