--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="icon" href="favicon.png">
     <title>Music Visualization</title>
   </head>
   <body onload="init()">
