set gradation color & add demo

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div>
           <label for="color">Color:</label>
           <div class="color-box">
-            <input type="color" id="color" name="color" value="#ff9f43"/>
+            <input type="color" id="color" name="color" value="#47b8e0"/>
           </div>
         </div>
         <div>
           <label for="bg-color">Background:</label>
           <div class="color-box">
-            <input type="color" id="bg-color" name="color" value="#34314c"/>
+            <input type="color" id="bg-color" name="color" value="#fff"/>
           </div>
         </div>
       </div>
